--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+package-lock.json
+
 # Logs
 logs
 *.log
@@ -57,3 +59,6 @@ typings/
 # dotenv environment variables file
 .env
 
+# IDE
+.idea
+*.iml
