only include bin files in pkg

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "standard": "bin-standard.sh",
     "prettier-standard": "bin-prettier-standard.sh"
   },
+  "files":[
+    "bin-*"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
