--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,8 +36,7 @@ jobs:
         name: Install dependencies
         run: |
           npm install
-          npm update prettier
-          npm update standard
+          npm update
           npm audit fix
       -
         name: Check for file changes
