ci: skip git tag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         if: env.change
         name: Version bump
         run: |
-          echo "tag=$(npm version patch)" >> $GITHUB_ENV
+          echo "tag=$(npm version patch --no-git-tag-version)" >> $GITHUB_ENV
       -
         if: env.change
         name: Commit & push changes
